<resources>
    <string name="app_name">RS10</string>
    <string name="language">CN</string>
    <string name="login_text">欢迎登录浩科商家版</string>
    <string name="login">登录</string>
    <string name="login_user">请输入手机号</string>
    <string name="login_password">请输入密码</string>
    <string name="register">注册</string>
    <string name="register_end">完成注册</string>
    <string name="forget">忘记密码</string>
    <string name="forget_1">忘记密码？</string>
    <string name="login_tongyi">同意</string>
    <string name="login_xieui">《隐私保护协议》</string>
    <string name="xieyi">隐私保护协议</string>

    <string name="re_tv_1">机器人ID号:</string>
    <string name="re_tv_2">绑定手机号:</string>
    <string name="re_tv_3">验证码:</string>
    <string name="re_tv_4">输入密码:</string>
    <string name="re_tv_5">确认密码:</string>
    <string name="re_tv_6">店铺名:</string>
    <string name="re_tv_7">昵称:</string>


    <string name="fp_tv_1">请输入手机号:</string>
    <string name="fp_tv_2">验证码:</string>
    <string name="fp_tv_3">请输入新密码:</string>
    <string name="fp_tv_4">请确认新密码:</string>
    <string name="fp_hint_1">请输入手机号</string>
    <string name="fp_hint_2">请输入验证码</string>
    <string name="fp_hint_3">请输入新密码</string>
    <string name="fp_hint_4">请确认新密码</string>


    <string name="re_hint_1">请输入机器人ID号</string>
    <string name="re_hint_2">请输入手机号</string>
    <string name="re_hint_3">请输入验证码</string>
    <string name="re_hint_4">请输入密码</string>
    <string name="re_hint_5">请输入确认密码</string>
    <string name="re_hint_6">请输入店铺名</string>
    <string name="re_hint_7">请输入昵称</string>

    <string name="main_1">首页</string>
    <string name="main_2">助手</string>
    <string name="main_3">消息</string>
    <string name="main_4">我的</string>

    <string name="re_hqyzm">获取验证码</string>

    <string name="search_str">搜索</string>
    <string name="search_jq">精确搜索</string>
    <string name="search_mohu">模糊搜索</string>
    <string name="search_hint_1">请输入商品名称</string>
    <string name="search_hint_2">请输入商品品牌</string>

    <string name="cue_no_empty">不能为空</string>
    <string name="cue_is_no_empty">不能为空</string>
    <string name="cue_nickname_is_no_empty">名称不能为空</string>
    <string name="cue_is_no_Emoji">不支持表情</string>
    <string name="cue_nickname_is_no_Emoji">名称不支持表情</string>
    <string name="cue_password_is_no_error">旧密碼错误</string>
    <string name="cue_password_is_no_empty">密碼不能为空</string>
    <string name="cue_password_is_no_correct">密碼长度不正确</string>
    <string name="cue_password_is_no_16_bits">密码不能超过16位</string>

    <string name="cue_name_is_no_16_bits">姓名不能超过16位</string>
    <string name="cue_code_is_no_6_bits">验证码不能超过6位</string>

    <string name="cancel">取消</string>
    <string name="sure">确定</string>
    <string name="wait_dialog">请稍等...</string>
    <string name="cue_code_is_no_empty">验证码不能为空</string>
    <string name="cue_phone_is_no_empty">手机号码不能为空</string>
    <string name="cue_phone_is_no_correct">手机号码格式不正确</string>
    <string name="other_delete">删除</string>
    <string name="other_cancel">取消</string>
    <string name="other_ensure">确定</string>
    <string name="other_save">保存</string>
    <string name="other_edit">编辑</string>
    <string name="cue_set_name">输入你想要的名称</string>
    <string name="cue_is_no_bits">不能超过%d位</string>

    <!-- 授权 -->
    <string name="permission_open">为了保证应用正常运行，请打开权限</string>
    <string name="permission_camera">为了保证应用正常运行，需要获取相机权限</string>
    <string name="permission">授权</string>
    <string name="permission_active">手动授权</string>

    <!-- 设备绑定 -->
    <string name="device_binding">设备绑定</string>
    <string name="device_twocode">条形码扫描</string>
    <string name="binding_please_enter_imei_number">请输入IMEI号进行绑定</string>
    <string name="binding_present">当前设备:</string>
    <string name="binding">绑定</string>
    <string name="Please_bond_device">请绑定设备</string>
    <string name="viewfinderview_status_text1">请将设备条形码置于方框内</string>
    <string name="viewfinderview_status_text2">即可自动扫描</string>
    <string name="cue_is_no_correct">格式不正确</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="N_A">N/A</string>
    <string name="close">Close</string>
    <string name="exit">Exit</string>
    <string name="sample">Sample</string>
    <string name="recent">Recent</string>
    <string name="settings">Settings</string>
    <string name="tracks">Tracks</string>
    <string name="toggle_player">Player</string>
    <string name="toggle_render">Render</string>
    <string name="toggle_ratio">Scale</string>
    <string name="show_info">Info</string>
    <string name="vdec">vdec</string>
    <string name="fps">fps</string>
    <string name="v_cache">v-cache</string>
    <string name="a_cache">a-cache</string>
    <string name="load_cost">load-cost</string>
    <string name="seek_cost">seek_cost</string>
    <string name="seek_load_cost">seek_load_cost</string>
    <string name="tcp_speed">tcp_speed</string>
    <string name="bit_rate">bit_rate</string>

    <string name="media_information">Media Information</string>
    <string name="mi_player">Player</string>
    <string name="mi_media">Media</string>
    <string name="mi_profile_level">Profile level</string>
    <string name="mi_pixel_format">Pixel format</string>
    <string name="mi_resolution">Resolution</string>
    <string name="mi_length">Length</string>
    <string name="mi_stream_fmt1">Stream #%d</string>
    <string name="mi_type">Type</string>
    <string name="mi_language">Language</string>
    <string name="mi_codec">Codec</string>
    <string name="mi_frame_rate">Frame rate</string>
    <string name="mi_bit_rate">Bit rate</string>
    <string name="mi_sample_rate">Sample rate</string>
    <string name="mi_channels">Channels</string>
    <string name="mi__selected_video_track">*</string>
    <string name="mi__selected_audio_track">*</string>
    <string name="mi__selected_subtitle_track">*</string>

    <string name="TrackType_video">Video</string>
    <string name="TrackType_audio">Audio</string>
    <string name="TrackType_subtitle">Subtitle</string>
    <string name="TrackType_timedtext">Timed text</string>
    <string name="TrackType_metadata">Meta data</string>
    <string name="TrackType_unknown">没有视频资源</string>

    <string name="VideoView_error_text_invalid_progressive_playback">Invalid progressive playback</string>
    <string name="VideoView_error_text_unknown">没有视频资源</string>
    <string name="VideoView_error_button">OK</string>

    <string name="VideoView_ar_aspect_fit_parent">Aspect / Fit parent</string>
    <string name="VideoView_ar_aspect_fill_parent">Aspect / Fill parent</string>
    <string name="VideoView_ar_aspect_wrap_content">Aspect / Wrap content</string>
    <string name="VideoView_ar_match_parent">Free / Fill parent</string>
    <string name="VideoView_ar_16_9_fit_parent">16:9 / Fit parent</string>
    <string name="VideoView_ar_4_3_fit_parent">4:3 / Fit parent</string>

    <string name="VideoView_render_none">Render: None</string>
    <string name="VideoView_render_surface_view">Render: SurfaceView</string>
    <string name="VideoView_render_texture_view">Render: TextureView</string>

    <string name="VideoView_player_none">Player: None</string>
    <string name="VideoView_player_AndroidMediaPlayer">Player: AndroidMediaPlayer</string>
    <string name="VideoView_player_IjkMediaPlayer">Player: IjkMediaPlayer</string>
    <string name="VideoView_player_IjkExoMediaPlayer">Player: IjkExoMediaPlayer</string>

    <string name="play_description">Play</string>
    <string name="pause_description">Pause</string>

    <string name="media_play">播放</string>
    <string name="pause">暂停</string>
    <string name="stop">停止</string>
    <string name="setting">设置</string>
    <string name="back">返回</string>
    <string name="fullScreek">全屏</string>
    <string name="smallScreen">小屏</string>

    <string name="serach_title">商品速查</string>
    <!-- 授权 -->

    <string name="permission_location">为了保证应用正常运行，需要获取位置权限</string>

    <string name="permission_read">为了保证应用正常运行，需要获取读写手机存储权限权限</string>
    <string name="edit_rule">qwertyuioplkjhgfdsazxcvbnmQWERTYUIOPLKJHGFDSAZXCVBNM1234567890</string>
</resources>
