<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="true"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:background="@color/color_eee"
    tools:context="com.haoke.rs10.activity.ForgetPassWordActivity">

    <RelativeLayout
        android:id="@+id/titlr_rl"
        android:layout_width="match_parent"
        android:layout_height="@dimen/y_45">

        <include layout="@layout/layout_titlebar" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/y_60"
        android:background="@color/color_fff">

        <TextView
            android:id="@+id/tv_1"
            android:layout_width="@dimen/x_160"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/x_20"
            android:text="@string/fp_tv_1"
            android:textColor="@color/color_333"
            android:textSize="@dimen/x_20" />

        <EditText
            android:id="@+id/ed_1"
            android:layout_width="@dimen/x_200"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/tv_1"
            android:background="@color/transparent"
            android:ems="10"
            android:hint="@string/fp_hint_1"
            android:inputType="number"
            android:maxLength="16"
            android:textColor="@color/color_333"
            android:textColorHint="@color/color_aaa"
            android:textSize="@dimen/x_20"></EditText>
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/y_60"
        android:background="@color/color_fff">

        <TextView
            android:id="@+id/tv_2"
            android:layout_width="@dimen/x_160"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/x_20"
            android:maxLines="1"
            android:text="@string/fp_tv_2"
            android:textColor="@color/color_333"
            android:textSize="@dimen/x_20" />

        <EditText
            android:id="@+id/ed_2"
            android:layout_width="@dimen/x_200"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/tv_2"
            android:background="@color/transparent"
            android:ems="10"
            android:hint="@string/fp_hint_2"
            android:inputType="number"
            android:maxLength="8"
            android:textColor="@color/color_333"
            android:textColorHint="@color/color_aaa"
            android:textSize="@dimen/x_20"></EditText>


        <Button
            android:id="@+id/bt_code"
            android:layout_width="@dimen/x_112"
            android:layout_height="@dimen/y_38"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/x_15"
            android:background="@drawable/shape_white_blue"
            android:text="@string/re_hqyzm"
            android:textColor="@color/color_fff"
            android:textSize="@dimen/x_17" />
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/y_60"
        android:layout_marginTop="@dimen/y_20"
        android:background="@color/color_fff">

        <TextView
            android:id="@+id/tv_3"
            android:layout_width="@dimen/x_160"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/x_20"
            android:text="@string/fp_tv_3"
            android:textColor="@color/color_333"
            android:textSize="@dimen/x_20" />

        <com.haoke.rs10.views.PassWordEdit
            android:id="@+id/ed_3"
            android:layout_width="@dimen/x_200"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/tv_3"
            android:background="@color/transparent"
            android:hint="@string/fp_hint_3"
            android:inputType="textPassword"
            android:textColor="@color/color_333"
            android:textColorHint="@color/color_aaa"
            android:textSize="@dimen/x_20"></com.haoke.rs10.views.PassWordEdit>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/y_60"
        android:background="@color/color_fff">

        <TextView
            android:id="@+id/tv_4"
            android:layout_width="@dimen/x_160"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/x_20"
            android:text="@string/fp_tv_4"
            android:textColor="@color/color_333"
            android:textSize="@dimen/x_20" />

        <com.haoke.rs10.views.PassWordEdit
            android:id="@+id/ed_4"
            android:layout_width="@dimen/x_200"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/tv_4"
            android:background="@color/transparent"
            android:hint="@string/fp_hint_4"
            android:inputType="textPassword"
            android:textColor="@color/color_333"
            android:textColorHint="@color/color_aaa"
            android:textSize="@dimen/x_20"></com.haoke.rs10.views.PassWordEdit>

    </RelativeLayout>


    <Button
        android:id="@+id/button_sure"
        android:layout_width="match_parent"
        android:layout_height="@dimen/y_60"
        android:layout_marginLeft="@dimen/x_50"
        android:layout_marginRight="@dimen/x_50"
        android:layout_marginTop="@dimen/y_50"
        android:background="@drawable/background_shape_login"
        android:text="@string/sure"
        android:textColor="@color/color_fff"
        android:textSize="@dimen/x_23"></Button>
</LinearLayout>
