<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_eee"
    android:clipToPadding="true"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context="com.haoke.rs10.activity.RegisterActivity">

    <RelativeLayout
        android:id="@+id/titlr_rl"
        android:layout_width="match_parent"
        android:layout_height="@dimen/y_45">
        <include layout="@layout/layout_titlebar" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/y_60"
        android:background="@color/color_fff">

        <TextView
            android:id="@+id/tv_1"
            android:layout_width="@dimen/x_160"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/x_20"
            android:text="@string/re_tv_1"
            android:textColor="@color/color_333"
            android:textSize="@dimen/x_20" />

        <EditText
            android:id="@+id/ed_1"
            android:layout_width="@dimen/x_200"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/tv_1"
            android:background="@color/transparent"
            android:ems="10"
            android:maxLength="18"
            android:inputType="number"
            android:textColor="@color/color_333"
            android:textColorHint="@color/color_aaa"
            android:hint="@string/re_hint_1"
            android:textSize="@dimen/x_20">

            <requestFocus />
        </EditText>

        <ImageView
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/x_20"
            android:id="@+id/image_sacncode"
            android:layout_width="@dimen/y_35"
            android:layout_height="@dimen/y_35"
            android:clickable="true"
            android:padding="@dimen/x_2"
            android:layout_centerVertical="true"
            android:scaleType="fitXY"
            android:src="@drawable/scancode_press"
            />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/y_60"
        android:background="@color/color_fff">

        <TextView
            android:id="@+id/tv_2"
            android:layout_width="@dimen/x_160"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/x_20"
            android:text="@string/re_tv_2"
            android:textColor="@color/color_333"
            android:textSize="@dimen/x_20" />

        <EditText
            android:id="@+id/ed_2"
            android:layout_width="@dimen/x_200"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/tv_2"
            android:background="@color/transparent"
            android:ems="10"
            android:maxLength="16"
            android:inputType="number"
            android:hint="@string/re_hint_2"
            android:textColor="@color/color_333"
            android:textColorHint="@color/color_aaa"
            android:textSize="@dimen/x_20"></EditText>
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/y_60"
        android:background="@color/color_fff">

        <TextView
            android:id="@+id/tv_3"
            android:layout_width="@dimen/x_160"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/x_20"
            android:text="@string/re_tv_3"
            android:maxLines="1"
            android:textColor="@color/color_333"
            android:textSize="@dimen/x_20" />

        <EditText
            android:id="@+id/ed_3"
            android:layout_width="@dimen/x_200"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/tv_3"
            android:background="@color/transparent"
            android:ems="10"
            android:maxLength="8"
            android:inputType="number"
            android:textColor="@color/color_333"
            android:textColorHint="@color/color_aaa"
            android:hint="@string/re_hint_3"
            android:textSize="@dimen/x_20"></EditText>


        <Button
            android:id="@+id/bt_code"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_width="@dimen/x_112"
            android:layout_height="@dimen/y_38"
            android:layout_marginRight="@dimen/x_15"
            android:background="@drawable/shape_white_blue"
            android:text="@string/re_hqyzm"
            android:textColor="@color/color_fff"
            android:textSize="@dimen/x_17"/>
    </RelativeLayout>


    <RelativeLayout
        android:layout_marginTop="@dimen/y_20"
        android:layout_width="match_parent"
        android:layout_height="@dimen/y_60"
        android:background="@color/color_fff">

        <TextView
            android:id="@+id/tv_4"
            android:layout_width="@dimen/x_160"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/x_20"
            android:text="@string/re_tv_4"
            android:textColor="@color/color_333"
            android:textSize="@dimen/x_20" />

        <com.haoke.rs10.views.PassWordEdit
            android:id="@+id/ed_4"
            android:layout_width="@dimen/x_200"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/tv_4"
            android:background="@color/transparent"
            android:inputType="textPassword"
            android:hint="@string/re_hint_4"
            android:textColor="@color/color_333"
            android:textColorHint="@color/color_aaa"
            android:textSize="@dimen/x_20">
        </com.haoke.rs10.views.PassWordEdit>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/y_60"
        android:background="@color/color_fff">

        <TextView
            android:id="@+id/tv_5"
            android:layout_width="@dimen/x_160"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/x_20"
            android:text="@string/re_tv_5"
            android:textColor="@color/color_333"
            android:textSize="@dimen/x_20" />

        <com.haoke.rs10.views.PassWordEdit
            android:id="@+id/ed_5"
            android:layout_width="@dimen/x_200"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/tv_5"
            android:background="@color/transparent"
            android:inputType="textPassword"
            android:hint="@string/re_hint_5"
            android:textColor="@color/color_333"
            android:textColorHint="@color/color_aaa"
            android:textSize="@dimen/x_20">
        </com.haoke.rs10.views.PassWordEdit>

    </RelativeLayout>


    <RelativeLayout
        android:layout_marginTop="@dimen/y_20"
        android:layout_width="match_parent"
        android:layout_height="@dimen/y_60"
        android:background="@color/color_fff">

        <TextView
            android:id="@+id/tv_6"
            android:layout_width="@dimen/x_160"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/x_20"
            android:text="@string/re_tv_6"
            android:textColor="@color/color_333"
            android:textSize="@dimen/x_20" />

        <com.haoke.rs10.views.NameEdit
            android:id="@+id/ed_6"
            android:layout_width="@dimen/x_200"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/tv_6"
            android:background="@color/transparent"
            android:inputType="textPassword"
            android:hint="@string/re_hint_6"
            android:textColor="@color/color_333"
            android:textColorHint="@color/color_aaa"
            android:textSize="@dimen/x_20">
        </com.haoke.rs10.views.NameEdit>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/y_60"
        android:background="@color/color_fff">

        <TextView
            android:id="@+id/tv_7"
            android:layout_width="@dimen/x_160"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/x_20"
            android:text="@string/re_tv_7"
            android:textColor="@color/color_333"
            android:textSize="@dimen/x_20" />

        <com.haoke.rs10.views.NameEdit
            android:id="@+id/ed_7"
            android:layout_width="@dimen/x_200"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/tv_7"
            android:background="@color/transparent"
            android:inputType="textPassword"
            android:hint="@string/re_hint_7"
            android:textColor="@color/color_333"
            android:textColorHint="@color/color_aaa"
            android:textSize="@dimen/x_20">
        </com.haoke.rs10.views.NameEdit>

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/xieyi_rel"
        android:layout_width="match_parent"
        android:layout_height="@dimen/x_32"
        android:layout_below="@+id/register_rel"
        android:layout_marginTop="@dimen/y_20">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/image_xieyi"
                android:layout_width="@dimen/x_26"
                android:layout_height="@dimen/x_26"
                android:layout_gravity="center_vertical"
                android:clickable="true"
                android:padding="@dimen/x_5"
                android:scaleType="fitXY"
                android:src="@mipmap/xieyi_p" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/x_10"
                android:clickable="true"
                android:gravity="center_vertical"
                android:text="@string/login_tongyi"
                android:textColor="@color/color_333"
                android:textSize="@dimen/x_16" />

            <TextView
                android:id="@+id/tv_xieyi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:clickable="true"
                android:gravity="center_vertical"
                android:padding="@dimen/x_2"
                android:text="@string/login_xieui"
                android:textColor="@color/main_color"
                android:textSize="@dimen/x_16" />
        </LinearLayout>
    </RelativeLayout>


    <Button
        android:id="@+id/button_register"
        android:layout_width="match_parent"
        android:layout_height="@dimen/y_60"
        android:layout_marginLeft="@dimen/x_50"
        android:layout_marginRight="@dimen/x_50"
        android:layout_marginTop="@dimen/y_20"
        android:background="@drawable/background_shape_login"
        android:text="@string/register_end"
        android:textColor="@color/color_fff"
        android:textSize="@dimen/x_23"></Button>
</LinearLayout>
